syntax = "proto3";

option csharp_namespace = "WebAPI.Protos";

service WarehouseService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc CreateProduct (ProductCreateRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double value = 3;
  int32 weight = 4;
  string expireDate = 5;
  string typeOfDetention = 6;
  string typeOfProduct = 7;
  int32 shelfId = 8;
}

message ProductCreateRequest {
  string name = 1;
  int32 weight = 2;
  double value = 3;
  string expireDate = 4;
  string typeOfDetention = 5;
  string typeOfProduct = 6;
  int32 shelfId = 7;
}
